--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "ampersand-app": "^1.0.4",
+    "ampersand-model": "^6.0.3",
     "ampersand-router": "^3.0.2",
     "autoprefixer": "^6.3.4",
     "autoprefixer-stylus": "^0.5.0",
