--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "ampersand-app": "^1.0.4",
     "ampersand-model": "^6.0.3",
+    "ampersand-react-mixin": "^1.0.1",
     "ampersand-router": "^3.0.2",
     "autoprefixer": "^6.3.4",
     "autoprefixer-stylus": "^0.5.0",
