run build script to get webpack to create our relative paths for our octicons web fonts, amazing stuff

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "json-loader": "^0.5.4",
     "local-links": "^1.4.0",
     "node-uuid": "^1.4.7",
+    "octicons": "^3.5.0",
     "postcss-loader": "^0.8.2",
     "qs": "^6.1.0",
     "react": "^0.13.2",
